[package]
name = "packet_capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet="0.33.0" # make it easy to use network protocol transport layer below
log="0.4" # logger
env_logger="0.6.1" # logger
